# traa

./: CMakeLists.txt
src/base/: arch.h  disallow.h  platform.h  singleton.h
src/base/devices/screen/win/: capture_utils.cc  capture_utils.h  enumerator_win.cc  scoped_object_gdi.h
src/base/folder/: folder.h
src/base/log/: logger.h
src/base/os/win/: registry.h  version.cc  version.h
src/base/strings/: string_trans.h
src/base/thread/: callback.h  rw_lock.h  task_queue.h  thread_util.h  waitable_future.h
src/main/: engine.h
src/main/utils/: obj_string.h
